--- a/src/Userlist.css
+++ b/src/Userlist.css
@@ -24,6 +24,9 @@
   .msg_card_body{
     overflow-y: auto;
   }
+  .msg_container {
+    min-width:60px;
+  }
   .card-header{
     background-color: #495057;
     border-radius: 15px 15px 0 0 !important;
@@ -172,6 +175,7 @@ color: rgba(255,255,255,0.6);
   bottom: -15px;
   color: rgba(255,255,255,0.5);
   font-size: 10px;
+  white-space: nowrap;
 }
 .msg_time_send{
   position: absolute;
@@ -179,7 +183,17 @@ color: rgba(255,255,255,0.6);
   bottom: -15px;
   color: rgba(255,255,255,0.5);
   font-size: 10px;
+  white-space: nowrap;
 }
+
+.msg_sender{
+  position: absolute;
+  bottom: 25px;
+  color: darkred;
+  font-weight: bold;
+  font-size: 10px;
+}
+
 .msg_head{
   position: relative;
 }
